<resources>
    <string name="app_name">TPadV1</string>
    <string name="tab2text">Your feedback</string>
    <string name="feedback1">Feedback 1</string>
    <string name="feedback2">Feedback 2</string>
    <string name="feedback3">Feedback 3</string>
    <string name="feedback4">Feedback 4</string>
    <string name="feedback5">Feedback 5</string>
    <string name="edit_message">Enter your suggestions</string>
    <string name="button_send">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">Thank you!</string>
</resources>
